# redteam-foundry

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ETHICS.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
challenge_packs/samples/multilingual_benign_v1/: datacard.md  pack.yaml  scenarios.jsonl
configs/: dataset_versions.yaml  model_versions.yaml  run_agentdojo_baseline.yaml  run_agentdojo_full_prompt_stack.yaml  run_agentdojo_local_baseline.yaml  run_agentdojo_local_full_prompt_stack.yaml  run_agentdojo_local_secalign.yaml  run_agentdojo_local_spotlighting.yaml  run_agentdojo_secalign.yaml  run_agentdojo_spotlighting.yaml  run_anthropic_baseline.yaml  run_anthropic_full_stack.yaml  run_benign_control_baseline.yaml  run_benign_control_full_stack.yaml  run_benign_multilingual_baseline.yaml  run_local_baseline.yaml  run_local_full_stack.yaml  run_positive_control.yaml
docs/: RELEASING.md  ROADMAP.md
docs/findings/: benchmark-quality-report-card.md
examples/: export_to_agent_release_gates.md
paper/: analysis_plan.md  inventory.md  kill_condition.md
reports/samples/: hf_scorecard.md
scripts/: ci_local.ps1  ci_local.sh  headline_table.py  hf_scorecard.py
src/redteam/: __init__.py  __main__.py  benign.py  budget.py  cache.py  cli.py  compare.py  inspect_export.py  multilingual.py  orchestrator.py  packs.py  schemas.py  staleness.py  stats.py
src/redteam/corpora/: __init__.py  _base.py  _filters.py  advbench.py  agentdojo.py  datacard.py  harmbench.py  huggingface.py  jailbreakbench.py  quality.py  taxonomy.py
src/redteam/defences/: __init__.py  base.py  constitutional.py  llama_guard.py  secalign.py  spotlighting.py  system_prompt.py
src/redteam/scorers/: __init__.py  judge_claude.py  judge_human.py  refusal_keywords.py
src/redteam/targets/: __init__.py  _pricing.py  anthropic.py  base.py  ollama.py  openai_target.py
tests/: README.md  conftest.py
tests/data/advbench/: harmful_behaviors_sample.csv
tests/data/harmbench/: harmbench_behaviors_text_all_sample.csv
tests/data/jailbreakbench/: harmful-behaviors_sample.csv
tests/smoke/: test_defences_live.py  test_targets_live.py
tests/unit/: test_agentdojo_loader.py  test_benign.py  test_budget.py  test_cache.py  test_compare.py  test_corpus_quality.py  test_defences_base.py  test_exclusion_filter.py  test_hardening.py  test_huggingface.py  test_inspect_export.py  test_judge_claude.py  test_judge_human.py  test_loaders.py  test_multilingual.py  test_orchestrator.py  test_orchestrator_cross_judge.py  test_orchestrator_score.py  test_packs.py  test_pricing.py  test_schemas.py  test_scorer_refusal.py  test_smoke.py  test_staleness.py  test_stats.py  test_targets_mocked.py  test_taxonomy.py
