[project]
name = "llm-redteam-harness"
version = "0.1.0"
description = "Open-source LLM red-team evaluation harness — measures attack success rate of published adversarial prompts against composable defence stacks."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ross", email = "leaffeng1115@gmail.com" }]
keywords = ["llm", "ai-safety", "red-team", "evaluation", "prompt-injection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # LLM clients
  "anthropic>=0.40",
  "openai>=1.50",          # for OpenAI Moderation API later; cheap to install now
  "ollama>=0.4",
  # core
  "pydantic>=2.13,<3",
  "httpx>=0.27",
  "tenacity>=9.0",
  # data
  "datasets>=3.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
  # CLI / output
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  # dashboard
  "streamlit>=1.40",
  "plotly>=5.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=1.3",
  "pytest-cov>=5.0",
  "ruff>=0.15,<0.16",  # pin minor — keep in sync with .pre-commit-config.yaml
  "mypy>=1.13",
  "pre-commit>=4.0",
  # types
  "types-PyYAML",
]

[project.scripts]
redteam = "redteam.cli:app"

[project.urls]
Repository = "https://github.com/rosscyking1115/llm-redteam-harness"
Issues = "https://github.com/rosscyking1115/llm-redteam-harness/issues"

# ----------------------------------------------------------------------------
# Build
# ----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redteam"]

# ----------------------------------------------------------------------------
# Ruff (lint + format)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "B",               # bugbear
  "UP",              # pyupgrade
  "SIM",             # simplify
  "RUF",             # ruff-specific
]
ignore = [
  "E501",            # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"

# ----------------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs.
module = ["ollama.*", "datasets.*", "plotly.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"          # Lesson L11 — auto, not strict
markers = [
  "smoke: end-to-end smoke tests (may take longer)",
  "live: tests that hit live APIs (skipped in CI; require RUN_LIVE=1)",
]
