[project]
name = "redteam-foundry"
version = "0.2.1"
description = "An adversarial benchmark foundry for LLM safety: audit attack corpora, score benchmark staleness, compare defences (ASR + false-refusal), test multilingual over-refusal, and export safe challenge packs."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Cheng-Yuan King", email = "rosscyking1115@gmail.com" }]
keywords = [
  "llm",
  "ai-safety",
  "red-team",
  "evaluation",
  "prompt-injection",
  "jailbreak",
  "benchmark",
  "benchmark-staleness",
  "false-refusal",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # LLM clients
  "anthropic>=0.40",
  "openai>=1.50",          # for OpenAI Moderation API later; cheap to install now
  "ollama>=0.4",
  # core
  "pydantic>=2.13,<3",
  "httpx>=0.27",
  "tenacity>=9.0",
  # data
  "datasets>=3.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
  # CLI / output
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dashboard = [
  # A results dashboard is roadmap, not built yet — these are heavy, so they
  # are opt-in rather than in the default install.
  "streamlit>=1.40",
  "plotly>=5.24",
]
agentdojo = [
  # Enables the real AgentDojo loader (src/redteam/corpora/agentdojo.py).
  # AGPL-3.0; we use it as a runtime dependency only — no redistribution.
  "agentdojo>=0.1",
]
inspect = [
  # Enables `redteam export-inspect` — RunResult -> Inspect AI eval log, so
  # runs can be opened in `inspect view` or loaded with read_eval_log().
  "inspect-ai>=0.3.224",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=1.3",
  "pytest-cov>=5.0",
  "ruff>=0.15,<0.16",  # pin minor — keep in sync with .pre-commit-config.yaml
  "mypy>=1.13",
  "pre-commit>=4.0",
  # exercised by tests/unit/test_inspect_export.py (CI runs the exporter test)
  "inspect-ai>=0.3.224",
  # scripts/plot_results.py — regenerates the README results figure
  "matplotlib>=3.8",
  # types
  "types-PyYAML",
]

[project.scripts]
redteam = "redteam.cli:app"

[project.urls]
Homepage = "https://github.com/rosscyking1115/redteam-foundry"
Repository = "https://github.com/rosscyking1115/redteam-foundry"
Documentation = "https://github.com/rosscyking1115/redteam-foundry/blob/main/METHODOLOGY.md"
Changelog = "https://github.com/rosscyking1115/redteam-foundry/blob/main/CHANGELOG.md"
Issues = "https://github.com/rosscyking1115/redteam-foundry/issues"

# ----------------------------------------------------------------------------
# Build
# ----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redteam"]

# ----------------------------------------------------------------------------
# Ruff (lint + format)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "B",               # bugbear
  "UP",              # pyupgrade
  "SIM",             # simplify
  "RUF",             # ruff-specific
]
ignore = [
  "E501",            # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# The multilingual benign corpus and its test intentionally contain CJK text.
# RUF001 flags "ambiguous" Unicode (homoglyph) characters — a false positive
# for legitimate non-Latin data (e.g. full-width CJK punctuation).
"src/redteam/multilingual.py" = ["RUF001"]
"tests/unit/test_multilingual.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

# ----------------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs.
module = ["ollama.*", "datasets.*", "plotly.*", "agentdojo.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"          # Lesson L11 — auto, not strict
markers = [
  "smoke: end-to-end smoke tests (may take longer)",
  "live: tests that hit live APIs (skipped in CI; require RUN_LIVE=1)",
]
